@@ -16,23 +16,20 @@ import com.gmail.nossr50.util.player.UserManager;
 import com.gmail.nossr50.util.skills.SkillUtils;
 import com.gmail.nossr50.worldguard.WorldGuardManager;
 import com.gmail.nossr50.worldguard.WorldGuardUtils;
-import com.google.common.collect.ImmutableList;
-import java.util.ArrayList;
-import java.util.List;
 import org.bukkit.World;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabExecutor;
 import org.bukkit.entity.Player;
-import org.bukkit.util.StringUtil;
 import org.jetbrains.annotations.NotNull;
 
-public class PtpCommand implements TabExecutor {
-    public static final List<String> TELEPORT_SUBCOMMANDS = ImmutableList.of("toggle", "accept",
-            "acceptany",
-            "acceptall");
+import java.util.List;
 
+public class PtpCommand implements TabExecutor {
+    public static final List<String> TELEPORT_SUBCOMMANDS = List.of("alternar", "aceitar",
+            "aceitar-qualquer",
+            "aceitar-tudo");
     private final CommandExecutor ptpToggleCommand = new PtpToggleCommand();
     private final CommandExecutor ptpAcceptAnyCommand = new PtpAcceptAnyCommand();
     private final CommandExecutor ptpAcceptCommand = new PtpAcceptCommand();
@@ -40,12 +37,11 @@ public class PtpCommand implements TabExecutor {
     protected static boolean canTeleport(CommandSender sender, Player player, String targetName) {
         McMMOPlayer mcMMOTarget = UserManager.getPlayer(targetName);
 
-        if (!CommandUtils.checkPlayerExistence(sender, targetName, mcMMOTarget)) {
-            return false;
-        }
+        if (!CommandUtils.checkPlayerExistence(sender, targetName, mcMMOTarget)) return false;
+
+        if (mcMMOTarget == null) return false;
 
         Player target = mcMMOTarget.getPlayer();
-
         if (player.equals(target)) {
             player.sendMessage(LocaleLoader.getString("Party.Teleport.Self"));
             return false;
@@ -56,7 +52,10 @@ public class PtpCommand implements TabExecutor {
             return false;
         }
 
-        if (!mcMMOTarget.getPartyTeleportRecord().isEnabled()) {
+        PartyTeleportRecord ptpRecord = mcMMOTarget.getPartyTeleportRecord();
+        if (ptpRecord == null) return false;
+
+        if (!ptpRecord.isEnabled()) {
             player.sendMessage(LocaleLoader.getString("Party.Teleport.Disabled", targetName));
             return false;
         }
@@ -81,6 +80,8 @@ public class PtpCommand implements TabExecutor {
         }
 
         McMMOPlayer mcMMOPlayer = UserManager.getPlayer(teleportingPlayer);
+        if (mcMMOPlayer == null) return;
+
         McMMOPlayer mcMMOTarget = UserManager.getPlayer(targetPlayer);
 
         long warmup = mcMMO.p.getGeneralConfig().getPTPCommandWarmup();
@@ -89,22 +90,18 @@ public class PtpCommand implements TabExecutor {
 
         if (warmup > 0) {
             teleportingPlayer.sendMessage(LocaleLoader.getString("Teleport.Commencing", warmup));
-            mcMMO.p.getFoliaLib().getScheduler().runAtEntityLater(teleportingPlayer,
-                    new TeleportationWarmup(mcMMOPlayer, mcMMOTarget), 20 * warmup);
+            mcMMO.p.getFoliaLib().getScheduler().runAtEntityLater(teleportingPlayer, new TeleportationWarmup(mcMMOPlayer, mcMMOTarget), 20 * warmup);
         } else {
             EventUtils.handlePartyTeleportEvent(teleportingPlayer, targetPlayer);
         }
     }
 
     @Override
-    public boolean onCommand(@NotNull CommandSender sender, @NotNull Command command,
-            @NotNull String label,
-            String[] args) {
-        if (CommandUtils.noConsoleUsage(sender)) {
+    public boolean onCommand(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, String[] args) {
+        if (!(sender instanceof Player player)) {
+            sender.sendMessage(LocaleLoader.getString("Commands.NoConsole"));
             return true;
         }
-
-        Player player = (Player) sender;
 
         /* WORLD GUARD MAIN FLAG CHECK */
         if (WorldGuardUtils.isWorldGuardLoaded()) {
@@ -118,16 +115,13 @@ public class PtpCommand implements TabExecutor {
             return true;
         }
 
-        if (!UserManager.hasPlayerDataKey(player)) {
-            return true;
-        }
+        if (!UserManager.hasPlayerDataKey(player)) return true;
 
-        if (UserManager.getPlayer((Player) sender) == null) {
+        McMMOPlayer mcMMOPlayer = UserManager.getPlayer(player);
+        if (mcMMOPlayer == null) {
             sender.sendMessage(LocaleLoader.getString("Profile.PendingLoad"));
             return true;
         }
-
-        McMMOPlayer mcMMOPlayer = UserManager.getPlayer(player);
 
         if (!mcMMOPlayer.inParty()) {
             sender.sendMessage(LocaleLoader.getString("Commands.Party.None"));
@@ -135,6 +129,7 @@ public class PtpCommand implements TabExecutor {
         }
 
         Party party = mcMMOPlayer.getParty();
+        if (party == null) return true;
 
         if (party.getLevel() < mcMMO.p.getGeneralConfig()
                 .getPartyFeatureUnlockLevel(PartyFeature.TELEPORT)) {
@@ -143,11 +138,11 @@ public class PtpCommand implements TabExecutor {
         }
 
         if (args.length == 1) {
-            if (args[0].equalsIgnoreCase("toggle")) {
+            if (args[0].equalsIgnoreCase("alternar")) {
                 return ptpToggleCommand.onCommand(sender, command, label, args);
             }
 
-            if (args[0].equalsIgnoreCase("acceptany") || args[0].equalsIgnoreCase("acceptall")) {
+            if (args[0].equalsIgnoreCase("aceitar-qualquer") || args[0].equalsIgnoreCase("aceitar-tudo")) {
                 return ptpAcceptAnyCommand.onCommand(sender, command, label, args);
             }
 
@@ -165,17 +160,23 @@ public class PtpCommand implements TabExecutor {
                 }
             }
 
-            if (args[0].equalsIgnoreCase("accept")) {
+            if (args[0].equalsIgnoreCase("aceitar")) {
                 return ptpAcceptCommand.onCommand(sender, command, label, args);
             }
 
             if (!Permissions.partyTeleportSend(sender)) {
-                sender.sendMessage(command.getPermissionMessage());
+                String commandPermissionMessage = command.getPermissionMessage();
+                if (commandPermissionMessage != null) {
+                    sender.sendMessage(commandPermissionMessage);
+                }
                 return true;
             }
 
             int ptpCooldown = mcMMO.p.getGeneralConfig().getPTPCommandCooldown();
-            long ptpLastUse = mcMMOPlayer.getPartyTeleportRecord().getLastUse();
+            PartyTeleportRecord ptpRecord = mcMMOPlayer.getPartyTeleportRecord();
+            if (ptpRecord == null) return true;
+
+            long ptpLastUse = ptpRecord.getLastUse();
 
             if (ptpCooldown > 0) {
                 int timeRemaining = SkillUtils.calculateTimeLeft(
@@ -196,33 +197,26 @@ public class PtpCommand implements TabExecutor {
 
     @Override
     public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command,
-            @NotNull String alias,
-            String[] args) {
+                                      @NotNull String alias,
+                                      String[] args) {
+        if (!(sender instanceof Player player)) return List.of();
+
         if (args.length == 1) {
-            List<String> matches = StringUtil.copyPartialMatches(args[0], TELEPORT_SUBCOMMANDS,
-                    new ArrayList<>(TELEPORT_SUBCOMMANDS.size()));
+            List<String> matches = TELEPORT_SUBCOMMANDS.stream()
+                    .filter(s -> s.startsWith(args[0])).toList();
 
-            if (matches.size() == 0) {
-                if (UserManager.getPlayer((Player) sender) == null) {
-                    sender.sendMessage(LocaleLoader.getString("Profile.PendingLoad"));
-                    return ImmutableList.of();
-                }
-
-                Player player = (Player) sender;
+            if (matches.isEmpty()) {
                 McMMOPlayer mcMMOPlayer = UserManager.getPlayer(player);
-
-                if (!mcMMOPlayer.inParty()) {
-                    return ImmutableList.of();
-                }
-
-                List<String> playerNames = mcMMOPlayer.getParty().getOnlinePlayerNames(player);
-                return StringUtil.copyPartialMatches(args[0], playerNames,
-                        new ArrayList<>(playerNames.size()));
+                if (mcMMOPlayer == null) return List.of();
+                if (!mcMMOPlayer.inParty()) return List.of();
+                Party party = mcMMOPlayer.getParty();
+                if (party == null) return List.of();
+                return mcMMOPlayer.getParty().getOnlinePlayerNames(player).stream().filter(s -> s.startsWith(args[0])).toList();
             }
 
             return matches;
         }
-        return ImmutableList.of();
+        return List.of();
     }
 
     private void sendTeleportRequest(CommandSender sender, Player player, String targetName) {
@@ -231,6 +225,7 @@ public class PtpCommand implements TabExecutor {
         }
 
         McMMOPlayer mcMMOTarget = UserManager.getPlayer(targetName);
+        if (mcMMOTarget == null) return;
         Player target = mcMMOTarget.getPlayer();
 
         if (mcMMO.p.getGeneralConfig().getPTPCommandWorldPermissions()) {
@@ -254,6 +249,7 @@ public class PtpCommand implements TabExecutor {
         }
 
         PartyTeleportRecord ptpRecord = mcMMOTarget.getPartyTeleportRecord();
+        if (ptpRecord == null) return;
 
         if (!ptpRecord.isConfirmRequired()) {
             handleTeleportWarmup(player, target);
@@ -266,8 +262,6 @@ public class PtpCommand implements TabExecutor {
         player.sendMessage(LocaleLoader.getString("Commands.Invite.Success"));
 
         target.sendMessage(LocaleLoader.getString("Commands.ptp.Request1", player.getName()));
-        target.sendMessage(
-                LocaleLoader.getString("Commands.ptp.Request2",
-                        mcMMO.p.getGeneralConfig().getPTPCommandTimeout()));
+        target.sendMessage(LocaleLoader.getString("Commands.ptp.Request2", mcMMO.p.getGeneralConfig().getPTPCommandTimeout()));
     }
 }
